add CRUD for authors
